--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.15.0'
+    implementation("androidx.appcompat:appcompat:1.7.0")
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
     implementation platform('androidx.compose:compose-bom:2025.01.01')
 
