--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,25 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy.force(
+            'androidx.core:core:1.13.1',
+            'androidx.core:core-ktx:1.13.1',
+            'androidx.activity:activity:1.9.3',
+            'androidx.activity:activity-ktx:1.9.3',
+            'androidx.activity:activity-compose:1.9.3'
+    )
+}
+
 dependencies {
-    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation("androidx.appcompat:appcompat:1.7.0")
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
     implementation platform('androidx.compose:compose-bom:2025.01.01')
 
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.activity:activity-compose:1.10.0'
+    implementation 'androidx.activity:activity-compose:1.9.3'
     implementation 'androidx.compose.material3:material3'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.navigation:navigation-compose:2.8.5'
