CI: fix workflow YAML (clean rewrite)

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,9 +1,10 @@
-name: Android Build
+name: Android Debug Build
 
 on:
   push:
-    branches: [ main, work ]
+    branches: [ "main" ]
   pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,22 +13,29 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: "17"
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
 
       - name: Guard: no Theme.Material3 in app/src
+        shell: bash
         run: |
           if grep -R "Theme\.Material3" -n app/src --exclude-dir=build ; then
-            echo "Found forbidden Theme.Material3 reference"; exit 1;
-          else
-            echo "OK: no Theme.Material3 under app/src";
+            echo "Found forbidden Theme.Material3 reference"
+            exit 1
           fi
+          echo "OK: no Theme.Material3 under app/src"
 
-      - name: Build debug APK
+      - name: Build Debug APK
         run: gradle :app:assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/*.apk
