--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -4,17 +4,18 @@ on:
   push:
     branches:
       - main
-  pull_request: {}
-  workflow_dispatch: {}
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -23,9 +24,15 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Guard no Theme.Material3
-        run: 'bash -lc ''if grep -R "Theme\.Material3" -n app/src --exclude-dir=build ; then echo "Found forbidden Theme.Material3 reference"; exit 1; else echo "OK: no Theme.Material3 under app/src"; fi'''
-        run: bash -lc 'if grep -R "Theme\.Material3" -n app/src --exclude-dir=build ; then echo "Found forbidden Theme.Material3 reference"; exit 1; else echo "OK: no Theme.Material3 under app/src"; fi'
+      - name: Guard: no Theme.Material3 in app/src
+        shell: bash
+        run: |
+          set -e
+          if grep -R "Theme\.Material3" -n app/src --exclude-dir=build ; then
+            echo "Found forbidden Theme.Material3 reference"
+            exit 1
+          fi
+          echo "OK: no Theme.Material3 under app/src"
 
       - name: Build Debug APK
         run: gradle :app:assembleDebug
