--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.navigation:navigation-compose:2.8.5'
+    implementation 'androidx.work:work-runtime-ktx:2.10.0'
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
 }
