--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ configurations.all {
             'androidx.core:core-ktx:1.13.1',
             'androidx.activity:activity:1.9.3',
             'androidx.activity:activity-ktx:1.9.3',
-            'androidx.activity:activity-compose:1.9.3'
+            'androidx.activity:activity-compose:1.9.3',
+            'androidx.work:work-runtime:2.9.0',
+            'androidx.work:work-runtime-ktx:2.9.0'
     )
 }
 
@@ -55,6 +57,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.activity:activity-compose:1.9.3'
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
     implementation 'androidx.compose.material3:material3'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.navigation:navigation-compose:2.8.5'
