--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,34 @@ android {
         versionName '1.0'
     }
 
+    def signingStoreFile = System.getenv('SIGNING_STORE_FILE')
+    def signingStorePassword = System.getenv('SIGNING_STORE_PASSWORD')
+    def signingKeyAlias = System.getenv('SIGNING_KEY_ALIAS')
+    def signingKeyPassword = System.getenv('SIGNING_KEY_PASSWORD')
+    def releaseSigningMissing = [
+            'SIGNING_STORE_FILE': signingStoreFile,
+            'SIGNING_STORE_PASSWORD': signingStorePassword,
+            'SIGNING_KEY_ALIAS': signingKeyAlias,
+            'SIGNING_KEY_PASSWORD': signingKeyPassword
+    ].findAll { key, value -> value == null || value.trim().isEmpty() }.keySet()
+
+    signingConfigs {
+        release {
+            if (releaseSigningMissing.isEmpty()) {
+                storeFile file(signingStoreFile)
+                storePassword signingStorePassword
+                keyAlias signingKeyAlias
+                keyPassword signingKeyPassword
+            }
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -34,6 +59,20 @@ android {
     buildFeatures {
         compose true
         buildConfig true
+    }
+}
+
+def isReleaseTaskRequested = gradle.startParameter.taskNames.any { it.toLowerCase().contains('release') }
+if (isReleaseTaskRequested) {
+    def missingReleaseSigningEnv = [
+            'SIGNING_STORE_FILE',
+            'SIGNING_STORE_PASSWORD',
+            'SIGNING_KEY_ALIAS',
+            'SIGNING_KEY_PASSWORD'
+    ].findAll { !System.getenv(it)?.trim() }
+
+    if (!missingReleaseSigningEnv.isEmpty()) {
+        throw new GradleException("Release signing is not configured. Missing environment variables: ${missingReleaseSigningEnv.join(', ')}")
     }
 }
 
