--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ configurations.all {
             'androidx.activity:activity:1.9.3',
             'androidx.activity:activity-ktx:1.9.3',
             'androidx.activity:activity-compose:1.9.3',
+            'androidx.appcompat:appcompat:1.7.0',
+            'com.google.android.material:material:1.12.0',
             'androidx.work:work-runtime:2.9.0',
             'androidx.work:work-runtime-ktx:2.9.0'
     )
@@ -68,6 +70,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.8.5'
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'io.github.ljcamargo:llamacpp-kotlin:0.2.0'
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
 }
