--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.compose'
 }
 
+repositories {
+    flatDir {
+        dirs 'local-libs'
+    }
+}
+
 android {
     namespace 'com.somnath.representative'
     compileSdk 34
@@ -67,7 +73,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.navigation:navigation-compose:2.8.5'
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation(name: 'onnxruntime-genai-android', ext: 'aar')
+    implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.23.1'
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
 }
