Fix dependency repositories and GenAI AAR download setup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.8.5'
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation(name: 'onnxruntime-genai-android', ext: 'aar')
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
 }
