--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
+        flatDir {
+            dirs("app/local-libs")
+        }
     }
 }
 
